--- a/web/css/style.css
+++ b/web/css/style.css
@@ -14,10 +14,6 @@ footer {
     margin: 20px 0;
 }
 
-table, th, td {
-    border: 1px solid black;
-}
-
 dl {
     background: none repeat scroll 0 0 #FAFAFA;
     margin: 8px 0;
@@ -33,4 +29,8 @@ dd {
     display: inline-block;
     margin-left: 8px;
     vertical-align: top;
+}
+
+h3 {
+    margin: 15px 0 5px;
 }
